跳过缓存区，直接提交index.html文件

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <style>
-        h1{
+        div{
             padding: 50px;
             font-size: 30px;
             color: red;
@@ -14,7 +14,10 @@
      </style>
 </head>
 <body>
+    <div>
    <h1>这是一个Git仓库测试！</h1> 
    <h2>提交入库后进行第一次更改测试！</h2>
+   <h3>提交入库后进行第二次更改测试！</h3>
+   </div>
 </body>
 </html>
